syntax = "proto3";

option go_package = "central";

import "storage/cluster.proto";

package central;

message HelmManagedConfigInit {
    storage.CompleteClusterConfig cluster_config = 1;
    string cluster_name = 2;
    string cluster_id   = 3;
}

message ClusterConfig {
    storage.DynamicClusterConfig config = 1;
    string cluster_id = 2;
}
